crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/andUnionTypes/7.ts
interface A {
  a: string;
}
interface B {
  b: string;
}
interface C {
  c: string;
}
interface D {
  d: string;
}

var cnd: C & D;
var x: (A & B) | (C & D);

cnd = x;
